# OpenCV-Playground

./: CMakeLists.txt  README.md  sample1.cpp
gui_opencv/: CMakeLists.txt  main.cpp
object_segmentation/: segmentation.hpp
